--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,133 @@ social_links:
   - medium
   - dribbble
 
+---
+AWSTemplateFormatVersion: '2010-09-09'
+Transform: AWS::Serverless-2016-10-31
+Description: Serverless Contact Us form for static website
+
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      -
+        Label:
+          default: "Configuration"
+        Parameters:
+          - Subject
+          - ToEmailAddress
+          - ReCaptchaSecret
+Parameters:
+  Subject:
+    Type: String
+    Description: Contact us email subject
+  ToEmailAddress:
+    Type: String
+    Description: Email address you want contact form submittions to go to
+  ReCaptchaSecret:
+    Type: String
+    Description: Your Google reCAPTCHA secret
+Resources:
+
+  #
+  # SNS Topic
+  #
+  ContactUsSNSTopic:
+    Type: AWS::SNS::Topic
+    Properties:
+      DisplayName:
+        Fn::Join:
+          - ''
+          - - Ref: AWS::StackName
+            - ' Topic'
+      Subscription:
+        - Endpoint: !Ref ToEmailAddress
+          Protocol: email
+      TopicName:
+        Fn::Join:
+          - ''
+          - - Ref: AWS::StackName
+            - '-topic'
+  #
+  # Role that our Lambda will assume to provide access to other AWS resources
+  #
+  IamRoleLambdaExecution:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: '/'
+
+  #
+  # Create a Policy and attach it to our Lambda Role.
+  #
+  IamPolicyLambdaExecution:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: IamPolicyLambdaExecution
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Action:
+            - logs:CreateLogGroup
+            - logs:CreateLogStream
+          Resource: arn:aws:logs:us-east-1:*:*
+        - Effect: Allow
+          Action:
+            - logs:PutLogEvents
+          Resource: arn:aws:logs:us-east-1:*:*
+          Resource: '*'
+        - Effect: Allow
+          Action:
+            - sns:Publish
+          Resource: arn:aws:logs:us-east-1:*:*
+          Resource: !Ref ContactUsSNSTopic
+      Roles:
+        - Ref: IamRoleLambdaExecution
+
+  #
+  # Our Lambda function.  Basic code has been added.  You will replace the code later via your Github repo.
+  #
+  ContactUsFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: index.handler
+      Timeout: 5
+      CodeUri: ./index.js
+      Runtime: nodejs8.10
+      Role:
+        Fn::GetAtt:
+          - IamRoleLambdaExecution
+          - Arn
+      Events:
+        PostEvent:
+          Type: Api
+          Properties:
+            Path: /
+            Method: post
+      Environment:
+        Variables:
+          ReCaptchaSecret: !Ref ReCaptchaSecret
+          ContactUsSNSTopic: !Ref ContactUsSNSTopic
+          Subject: !Ref Subject
+
+Outputs:
+  ApiUrl:
+    Description: URL of your API endpoint
+    Value: !Join
+      - ''
+      - - https://
+        - !Ref ServerlessRestApi
+        - '.execute-api.'
+        - !Ref 'AWS::Region'
+        - '.amazonaws.com/Prod'
 theme_colors:
   - black
   - blue
